<?xml version="1.0"?>
<package format="2">
    <name>multi_agent_vector_fields</name>
    <version>0.0.0</version>
    <description>The multi_agent_vector_fields package</description>
     <maintainer email="bingkun@todo.todo">bingkun</maintainer>


    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>eigen</build_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <depend>actionlib</depend>
    <depend>controller_interface</depend>
    <depend>franka_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <depend>moveit_msgs</depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
       
    </export>

</package>
